--- a/Drill/Week-4.Rmd
+++ b/Drill/Week-4.Rmd
@@ -11,19 +11,25 @@ startProblem("DCF-Assignment4")
 
 ## Week 4
 
+Identify each of these functions as either a **Data Verb**, a **Transformation**, a **Summary Function**, or a **Quick Presentation** or a **Comparison Expression**.
+
+* `str()` <aside class="answer"> Quick presentation</aside>
+* `group_by()` <aside class="answer"> Data verb</aside>
+* `rank()` <aside class="answer"> Transformation</aside>
+* `mean()` <aside class="answer"> Summary Function</aside>
+* `filter()` <aside class="answer"> Data Verb</aside>
+* `summary()`  <aside class="answer">Quick presentation </aside>
+* `summarize()` <aside class="answer">Data verb</aside>
+* `anti_join()` <aside class="answer">Data verb</aside>
+* `merge()` <aside class="answer">Data verb</aside>
+* `glimpse()` <aside class="answer">Quick presentation</aside>
+
 ### Diamonds
 
-These questions refer to the `diamonds` data table.  Take a look at the codebook (using `help()`) so that you'll understand the meaning of the tasks.^[Motivated by [this problem set](http://www.public.iastate.edu/~hofmann/stat480/homework/dplyr%20drills.html) based on drills by Garrett Grolemund.
+These questions refer to the `diamonds` data table.  Take a look at the codebook (using `help()`) so that you'll understand the meaning of the tasks.^[Motivated by [this problem set](http://www.public.iastate.edu/~hofmann/stat480/homework/dplyr%20drills.html) based on drills by Garrett Grolemund.]  Write, using paper and pen, an expression that will answer these questions.
 
-Each of the following tasks can be accomplished by a statement of the form
-```{r eval=FALSE}
-diamonds %>% 
-  verb1( args1 ) %>% 
-  verb2( args2 ) %>% 
-  arrange( args3 ) 
-```
 
-* Display the largest diamond depth observed for each clarity group.
+* What's the largest diamond depth observed for each clarity group?
 * What color of diamond is most common for each of the different cuts?
 
 
@@ -239,307 +245,7 @@ Add a new variable to `small` that gives the mean height for that person's group
 See [this set of exercises](http://www.public.iastate.edu/~hofmann/stat480/homework/dplyr%20drills.html)
 
 
-### Quiz
 
-
-
-
-
-
-### Multiple Choice
-
-There are three (simple) steps to creating a multiple-choice problem in *ScoreR*:
-
-1. Initialization of the question
-2. Creation of the individual items, typically embedded in *markdown* statements
-3. Termination of the question.
-
-Initialization is done with the `newMC()` function.
-
-```{r}
-f = newMC(totalPts=5,name="minus1") # Ordinarily, make this silent
-```
-
-The function name, in this case `f`, is arbitrary.  You will use that name to create the individual items with statements like `I(f(TRUE))` and I(f(FALSE))`, which will be embedded in text.  For instance:
-
-Which of these is equal to $-1$?  
-`r I(f(FALSE))` The value of $a x^2 + b x - c$ for all $a$, $b$, and $c$  
-`r I(f(TRUE))`  $e^{i\pi}$  
-`r I(f(FALSE))` $\ln(0)$  
-`r I(f(FALSE))` There's no such thing as a negative number, just a negative attitude.
-`r I(f(finish=TRUE))`
-
-After the items have been defined, terminate the question by calling the function with the argument `finish=TRUE`
-```{r eval=FALSE} 
-I(f(finish=TRUE))
-```
-You may well want to use inline knitr notation --- that's up to you.
-
-### Select from a set
-
-What's the value of $\pi$?
-```{r}
-piQuestion3 = selectSet(name="piValue3",totalPts=4,
-                        "2.71727"=FALSE,
-                        "3.0"=FALSE,
-                        "3.14159"=TRUE,
-                        "6.28318"=FALSE)
-```
-
-* Let's try that again ... `r I(piQuestion3)`
-
-
-### Free Text
-
-The `freeText()` function in `ScoreR` implements free-text entry.  It's very, very simple to add a free-text question to a problem.  Just
-
-`r I(textItem(name="question-topic",rows=2,totalPts=10))`
-
-The name, of course, should be unique within the problem.  The optional arguments `rows` and `cols` sets the size of the text entry box.  On many browsers, this block can be resized by the user, so a small box is useful in for adding in extended text.
-
-
-### Second Part
-
-A perennial problem when writing scientific reports is figuring out
-how many significant digits to report.  It's naïve to 
-copy all the digits from one's calculator or computer
-output; the data generally do not justify such
-precision. 
-
-Once you have a confidence interval, however, you do not need to guess
-how many significant digits are appropriate.  The standard error
-provides good guidance.  Here is a rule of thumb: keep two significant
-digits of the margin of error and round the point estimate to the same
-precision.  
-
-For example, suppose you have a confidence interval of $1.7862 \pm
-0.3624$ with 95% confidence.  Keeping the first two significant
-digits of the margin of error gives $0.36$.  We'll keep the point
-estimate to the same number of digits, giving altogether $1.79 \pm
-0.36$.
-
-Another example: suppose the confidence interval is $6548.23 \pm
-1321$.  Keeping the first two digits of the margin of error gives
-$1300$, with a corresponding margin of error of $6500 \pm 1300$.
-
-* Suppose the computer output is $0.03234232 \pm 0.01837232$.
-
-```{r include=FALSE}
-f=newMC(totalPts=1, name="confidence.interval")
-```
-Using this rule of thumb, what should you report in as the
-confidence interval?      
-`r I(f(FALSE))` $0.3234 \pm 0.01837$     
-`r I(f(FALSE))` $0.3234 \pm 0.0183$     
-`r I(f(FALSE))` $0.0323 \pm 0.0184$    
-`r I(f(FALSE))` $0.0323 \pm 0.018$     
-`r I(f(TRUE))` $0.032 \pm 0.018$     
-`r I(f(FALSE))` $0.032 \pm 0.01$     
-`r I(f(FALSE))` $0.03 \pm 0.01$   
-`r I(f(finish=TRUE))`
-
-
-* Now suppose the computer output were $99.63742573 \pm 1.48924367$.
-
-```{r include=FALSE}
-g=newMC(totalPts=1, name="confidence.interval.2")
-```
-What should you report as the confidence interval?     
-`r I(g(FALSE))` $100 \pm 1$     
-`r I(g(FALSE))` $99 \pm 1.5$     
-`r I(g(TRUE))` $99.6 \pm 1.5$     
-`r I(g(FALSE))` $99.64 \pm 1.49$     
-`r I(g(FALSE))` $99.647 \pm 1.489$ 
-`r I(g(finish=TRUE))`
-
-`r I(endProblem())`
-
-
-* Filter --- Find those cases in the left table that have a match in the right. [Give back just those countries in the G8]
-
-* Translate --- Translate a value from the left table according to a specification in the right table.  [List of synonyms for countries and an official identifier.  Translate the synonmyms into the official identifier.]
-[Marking candidates as "minor" in Minneapolis Mayor]
-
-
-#### Left Join
-
-Merge with all.x=TRUE.
-
-A *left join* includes the results of the inner join along with all the non-matching cases from the left table.  For the non-matching cases, the value of the variable from the right table is "missing" data.
-
-```{r echo=FALSE,results='asis'}
-xtable( left_join( LL, RR ) )
-```
-
-  As an example, consider the following table (which is a small part of the `CountryData` table).
-
-```{r echo=FALSE}
-CountryLeft <- CountryData[c( 48, 70, 89, 109, 110, 174, 183, 221, 242, 248), 1:3]
-row.names(CountryLeft) <- NULL
-```
-
-```{r echo=FALSE,results='asis',scroller=300}
-xtable( CountryLeft )
-```
-
-An left join can attach the information from the `CountryGroups` table to the geographic/demographic data. 
-
-```{r echo=FALSE, results='hide'}
-left_join( CountryLeft, CountryGroups )
-```
-
-
-
-
-Join: minor candidates
-
-Join: 
-
-* select out the G20 countries
-* add a variable indicating whether a country is in the G20 --- make a map
-
-
-Mutate, Filter & Select, Arrange?  save Join for later.
-
-Example with Mutate: Calculation the proportion of smokers who are alive adjusted for sex and age.  You'll need `mutate()` to add the proportion variable on.
-
-
-
-There are many international groups to which countries may belong.  Some famous ones are the G8 and G20 industrialized economies.  Here's part of the `CountryGroups` table that identifies the membership for three different international groups.
-
-```{r echo=FALSE,results='asis',scroller=300}
-set.seed(129)
-CountryGroups %>% xtable()
-```
-
-```{r eval=FALSE}
-merge(CountryLeft, CountryGroups)
-```
-```{r echo=FALSE,results='asis',scroller=300 }
-merge(CountryLeft, CountryGroups) %>% xtable
-```
-```{r eval=FALSE}
-merge(CountryLeft, CountryGroups, all.x=TRUE)
-```
-
-```{r echo=FALSE,results='asis',scroller=300}
-merge(CountryLeft, CountryGroups, all.x=TRUE) %>% xtable
-```
-
-[List of synonyms for countries and an official identifier.  Translate the synonmyms into the official identifier.]
-
-
-```{r child="../../CSS/DisqusTemplate.Rmd"}
-```
-
-
-### Multiple Choice
-
-There are three (simple) steps to creating a multiple-choice problem in *ScoreR*:
-
-1. Initialization of the question
-2. Creation of the individual items, typically embedded in *markdown* statements
-3. Termination of the question.
-
-Initialization is done with the `newMC()` function.
-
-```{r}
-f = newMC(totalPts=5,name="minus1") # Ordinarily, make this silent
-```
-
-The function name, in this case `f`, is arbitrary.  You will use that name to create the individual items with statements like `I(f(TRUE))` and I(f(FALSE))`, which will be embedded in text.  For instance:
-
-Which of these is equal to $-1$?  
-`r I(f(FALSE))` The value of $a x^2 + b x - c$ for all $a$, $b$, and $c$  
-`r I(f(TRUE))`  $e^{i\pi}$  
-`r I(f(FALSE))` $\ln(0)$  
-`r I(f(FALSE))` There's no such thing as a negative number, just a negative attitude.
-`r I(f(finish=TRUE))`
-
-After the items have been defined, terminate the question by calling the function with the argument `finish=TRUE`
-```{r eval=FALSE} 
-I(f(finish=TRUE))
-```
-You may well want to use inline knitr notation --- that's up to you.
-
-### Select from a set
-
-What's the value of $\pi$?
-```{r}
-piQuestion3 = selectSet(name="piValue3",totalPts=4,
-                        "2.71727"=FALSE,
-                        "3.0"=FALSE,
-                        "3.14159"=TRUE,
-                        "6.28318"=FALSE)
-```
-
-* Let's try that again ... `r I(piQuestion3)`
-
-
-### Free Text
-
-The `freeText()` function in `ScoreR` implements free-text entry.  It's very, very simple to add a free-text question to a problem.  Just
-
-`r I(textItem(name="question-topic",rows=2,totalPts=10))`
-
-The name, of course, should be unique within the problem.  The optional arguments `rows` and `cols` sets the size of the text entry box.  On many browsers, this block can be resized by the user, so a small box is useful in for adding in extended text.
-
-
-### Second Part
-
-A perennial problem when writing scientific reports is figuring out
-how many significant digits to report.  It's naïve to 
-copy all the digits from one's calculator or computer
-output; the data generally do not justify such
-precision. 
-
-Once you have a confidence interval, however, you do not need to guess
-how many significant digits are appropriate.  The standard error
-provides good guidance.  Here is a rule of thumb: keep two significant
-digits of the margin of error and round the point estimate to the same
-precision.  
-
-For example, suppose you have a confidence interval of $1.7862 \pm
-0.3624$ with 95% confidence.  Keeping the first two significant
-digits of the margin of error gives $0.36$.  We'll keep the point
-estimate to the same number of digits, giving altogether $1.79 \pm
-0.36$.
-
-Another example: suppose the confidence interval is $6548.23 \pm
-1321$.  Keeping the first two digits of the margin of error gives
-$1300$, with a corresponding margin of error of $6500 \pm 1300$.
-
-* Suppose the computer output is $0.03234232 \pm 0.01837232$.
-
-```{r include=FALSE}
-f=newMC(totalPts=1, name="confidence.interval")
-```
-Using this rule of thumb, what should you report in as the
-confidence interval?      
-`r I(f(FALSE))` $0.3234 \pm 0.01837$     
-`r I(f(FALSE))` $0.3234 \pm 0.0183$     
-`r I(f(FALSE))` $0.0323 \pm 0.0184$    
-`r I(f(FALSE))` $0.0323 \pm 0.018$     
-`r I(f(TRUE))` $0.032 \pm 0.018$     
-`r I(f(FALSE))` $0.032 \pm 0.01$     
-`r I(f(FALSE))` $0.03 \pm 0.01$   
-`r I(f(finish=TRUE))`
-
-
-* Now suppose the computer output were $99.63742573 \pm 1.48924367$.
-
-```{r include=FALSE}
-g=newMC(totalPts=1, name="confidence.interval.2")
-```
-What should you report as the confidence interval?     
-`r I(g(FALSE))` $100 \pm 1$     
-`r I(g(FALSE))` $99 \pm 1.5$     
-`r I(g(TRUE))` $99.6 \pm 1.5$     
-`r I(g(FALSE))` $99.64 \pm 1.49$     
-`r I(g(FALSE))` $99.647 \pm 1.489$ 
-`r I(g(finish=TRUE))`
-
-`r I(endProblem())`
 
 ```{r child="../CSS/DisqusTemplate.Rmd"}
 ```
