--- a/CSS/DCF-common.Rmd
+++ b/CSS/DCF-common.Rmd
@@ -21,7 +21,7 @@ library(xkcd)
 funTheme <- theme_xkcd()
 library(ScoreR)
 opts_chunk$set( tidy=FALSE, out.width="50%", comment=NA,
-                warning=FALSE)
+                warning=FALSE,message=FALSE)
 options( width=60, 
          na.rm=TRUE,
          # Printing tables
