Graphing notes posted.

--- a/CSS/DCF-common.Rmd
+++ b/CSS/DCF-common.Rmd
@@ -12,6 +12,8 @@ require(mosaic)
 require(knitr)
 require(dplyr)
 require(tidyr)
+require(NHANES)
+require(mosaicData)
 
 # For typesetting
 library(xtable)
